test/fail_compilation/fail234.d
//bug1941 = 1158   attrib.c
/*
attribute argument to mixin must be a string, not (null)
*/

mixin(null);
